tests/expectations/compiler/integers/u128/hex_min_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372008]: The value -0x1 is not a valid `u128`
    --> compiler-test:5:23
     |
   5 |         let a: u128 = -0x1u128;
     |                       ^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
